...

/* loco:6049df4d5c2c3a04bc397921 */
"allOfficeDocs" = "Document";

/* loco:620b6e7c1a94ac24b002fcd2 */
...

/* loco:6049df4d5c2c3a04bc397927 */
"allPathTitle" = "Location";

/* loco:6049df4d5c2c3a04bc397928 */
...

/* loco:6049df4d5c2c3a04bc397935 */
"buttonAdd" = "Add";

/* loco:6049df4d5c2c3a04bc397936 */
"buttonAddComment" = "Add a comment";

/* loco:6049df4d5c2c3a04bc397937 */
"buttonAddFavorites" = "Add to favorites";

/* loco:668e92d227a71514a808d485 */
...

/* loco:6049df4d5c2c3a04bc39793b */
"buttonCancel" = "Cancel";

/* loco:624e99d3adb6372fb56e5ab8 */
...

/* loco:6049df4d5c2c3a04bc39793d */
"buttonClose" = "Close";

/* loco:6049df4d5c2c3a04bc39793e */
...

/* loco:6049df4d5c2c3a04bc397944 */
"buttonCreate" = "Create";

/* loco:6049df4d5c2c3a04bc397945 */
"buttonCreateFolder" = "Create folder";

/* loco:60794894a643783766602fb2 */
...

/* loco:6049df4d5c2c3a04bc397947 */
"buttonDelete" = "Delete";

/* loco:611b6ca6fe8d0c03d92403e2 */
...

/* loco:6049df4d5c2c3a04bc39794b */
"buttonDuplicate" = "Duplicate";

/* loco:6049df4d5c2c3a04bc39794c */
"buttonEdit" = "Edit";

/* loco:606d687970761158a147b514 */
...

/* loco:6049df4d5c2c3a04bc39794d */
"buttonFileRights" = "Sharing and rights";

/* loco:6049df4d5c2c3a04bc39794e */
...

/* loco:6049df4d5c2c3a04bc39794f */
"buttonLater" = "Later";

/* loco:605b09e6a6279864ac4ba6f2 */
...

/* loco:6049df4d5c2c3a04bc397953 */
"buttonMenu" = "Menu";

/* loco:6049df4d5c2c3a04bc397954 */
"buttonMove" = "Move";

/* loco:6049df4d5c2c3a04bc397955 */
...

/* loco:69651623d1509dbfc30bdde2 */
"buttonRemoveUserFromShare" = "Cancel sharing";

/* loco:6049df4d5c2c3a04bc397960 */
"buttonRename" = "Rename";

/* loco:608fce3469583d3ba3411d43 */
...

/* loco:6049df4d5c2c3a04bc397961 */
"buttonSave" = "Save";

/* loco:606f1b035b651445ab137732 */
...

/* loco:6126165eb8a5c86c7f00f602 */
"buttonSelect" = "Select";

/* loco:6049df4d5c2c3a04bc397962 */
...

/* loco:685545854a29fa85140fcf62 */
"buttonSelectTheFolder" = "Select a folder";

/* loco:6049df4d5c2c3a04bc397963 */
"buttonSend" = "Send";

/* loco:6049df4d5c2c3a04bc397964 */
...

/* loco:6049df4d5c2c3a04bc397966 */
"buttonShare" = "Share";

/* loco:606d7c4a2f511b00e97a0152 */
...

/* loco:6049df4d5c2c3a04bc397970 */
"buttonUploadPhotoOrVideo" = "Upload a photo or video";

/* loco:6049df4d5c2c3a04bc397971 */
...

/* loco:6049df4d5c2c3a04bc3979d6 */
"fileDetailsCommentsTitle" = "Comments";

/* loco:6075c107fa8e01546e12d402 */
...

/* loco:6049df4d5c2c3a04bc3979dc */
"fileDetailsInfosTitle" = "Information";

/* loco:6049df4d5c2c3a04bc3979dd */
...

/* loco:6049df4d5c2c3a04bc3979ee */
"hintInputDirName" = "Folder name";

/* loco:6049df4d5c2c3a04bc3979ef */
...

/* loco:6049df4d5c2c3a04bc397a04 */
"modalMoveTrashTitle" = "Move to trash";

/* loco:697a226ca7f90b21b20ef8b2 */
...

/* loco:6049df4d5c2c3a04bc397a3e */
"shareFileInputUserAndEmail" = "Invite a user or an email address…";

/* loco:6049df4d5c2c3a04bc397a44 */
...

/* loco:6049df4d5c2c3a04bc397a58 */
"sortNameAZ" = "Name: from A to Z";

/* loco:6049df4d5c2c3a04bc397a59 */
...

/* loco:6049df4d5c2c3a04bc397a5c */
"sortRecent" = "Newer";

/* loco:6049df4d5c2c3a04bc397a5d */
...

/* loco:6049df4d5c2c3a04bc397a91 */
"userPermissionRead" = "Can view";

/* loco:6049df4d5c2c3a04bc397a92 */
...
